front/opencrvs-web-client/src/components/WorkingItem/styles.css
.secondaryButton {
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    border-radius: 20px;
    background: #fff;
    border: 1px solid #ddd;
    color: #666;
    padding: 0.5em 2em;
    font-size: 80%;
    margin-bottom: 0.3em;
}

.formOpen {
    overflow: scroll;
    height: 100%;
}

.wiContentHeader, .wiContentBody, .wiContentFooter, .printPreview {
    padding: 1em 2em;
}

.noSelectedDeclaration {
    height: 100%;
}

.wiContentBody {
    padding: 1em 1em;
    height: 573px;
    overflow: scroll;
}

.printPreview {
    padding: 1em 1em;
    overflow: scroll;
    height: auto;
}

.noSelectedMessage {
    position: relative;
    top: 75%;
    text-align: center;
}

.noSelectedMessage h1 {
    line-height: 0.2em;
    font-size: 2em;
}

.wiContentHeader {
    border-bottom: 1px solid #ddd;
    height: 13.6em;
}

.wiContentTitle {
    margin: 0.5em 0 0;
    font-size: 1em;
    color: #34495e;
}

.wiContentSubtitle {
    font-size: 0.8em;
    margin: 0;
    font-weight: normal;
}

.wiContentSubtitle span {
    color: #999;
}

.newWorkItem {
    position: relative;
    top: 0.7em;
}

.workingItemContainer {
    margin: 0;
    padding: 0;
    position: relative;
    display: block;
}

.smsMother {
    position: absolute;
    left: 38%;
    top: 7.5em;
    cursor: pointer;
}



.managerView {
    display: none;
}


.stopWatch {
    position: relative;
    top: -3em;
    left: 81%;
    border: none !important;
}

.stopWatchHidden {
    display: none;
}

@media (min-width: 55em) {
    .wiContentControls {
        text-align: right;
        margin-top: 1.2em;
    }
    .wiContentHeader {
        height: 6.6em;
    }

    .stopWatch {
        top: -2.6em;
    }


    .noSelectedDeclaration {
        position: fixed;
        width: 75%;
        height: 100%;
        top:6em;
        bottom:0;
        padding: 1em 2em;
    }

    .workingItemContainer {
        position: fixed;
        margin: 0;
        padding: 0;
        width: 75%;
        top: 6em;
        left: 25%;
        bottom: 0;
        height: 100%;
    }

    .noSelectedMessage {
        position: relative;
        top: 35%;
        text-align: center;
    }

    .wiContentTitle {
        font-size: 1em;
    }
    .newWorkItem {
        position: relative;
        top: 0.25em;
    }

    .smsMother {
        left: 68%;
        top: 1em;
    }

}

.iconHolder {
    width: 3em;
    float: left;
    top: 0.5em;
    position: relative;
    left: -1.5em;
}

.titleText {
    position: relative;
    left: -1em;
}

.certInfo {
    color: rgb(255, 64, 129);
    font-size: .66em;
    text-transform: uppercase;
    font-family: 'Roboto';
    position: relative;
    top:-0.5em;
}

.certInfo p{
    float: left;
    display: block;
    width: 80%; 
}


.certInfo svg{
    display: block;
    fill: currentColor;
    height: 36px;
    width: 20%;
    overflow: hidden;
    color: green;
    position: relative;
    top: 0.7em;
    left: 0.5em;
}

.alignRight {
    position: relative;
    top: 1.1em;
    text-align: right;
}

